# crack

./: CMakeLists.txt  README.md
include/: detection.hpp
include/nn/: autobackend.h
results/: result_G.txt  result_M.txt  result_O.txt  result_T.txt
src/: change_FileName.cpp  detect_line.cpp  detection.cpp  detection_main.cpp  find_contours.cpp  image_size.py
src/nn/: autobackend.cpp  onnx_model_base.cpp
src/utils/: augment.cpp  common.cpp  ops.cpp
trimming_image/: image_sizes.csv
